--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "weihuijie",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pug": "^3.0.2"
   }
 }
