--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "weihuijie",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^5.13.3",
     "pug": "^3.0.2"
   }
 }
