--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "weihuijie",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongoose": "^5.13.3",
     "pug": "^3.0.2"
   }
